--- a/Servlet/src/main/webapp/WEB-INF/html/start.html
+++ b/Servlet/src/main/webapp/WEB-INF/html/start.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-<form method="post" action="http://localhost:8080/users-app/users">
+<form method="post" action="http://localhost:8080/user-app/users">
     <input name="first_name">
     <input name="last_name">
     <input type="submit" value="Add">
